applications/infrastructure/ingress-rule/argo-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-service
spec:
  type: ExternalName
  externalName: argocd.argocd.svc.cluster.local
