applications/infrastructure/ingress-rule/frontend-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ExternalName
  externalName: frontend.frontend.svc.cluster.local
