applications/infrastructure/ingress-rule/image-service-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-service
spec:
  type: ExternalName
  externalName: image-service.image-service.svc.cluster.local
