applications/infrastructure/ingress-rule/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
spec:
  ingressClassName: nginx

  rules:
    - host: argo.kafka.ophkmh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
