applications/infrastructure/ingress-rule/kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: ingress
spec:
  ingressClassName: nginx

  rules:
    - host: kafka.kafka.ophkmh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui-service
                port:
                  number: 80
