applications/infrastructure/ingress-rule/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: ingress
spec:
  ingressClassName: nginx

  rules:
    - host: minio.kafka.ophkmh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9000
